[gd_scene load_steps=5 format=3 uid="uid://bxr5tasveyyot"]

[ext_resource type="Script" path="res://scripts/game_over_screen.gd" id="1_lfbmt"]
[ext_resource type="Texture2D" uid="uid://ba6mo6y6urtm7" path="res://assets/shirt-1671181932-5abe8617e0731d1ab2d8b2f6a6602d1e.webp" id="2_7eqmw"]
[ext_resource type="FontFile" uid="uid://boafiido6lxpb" path="res://assets/PressStart2P.ttf" id="3_f5e0u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1fduq"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(1, 1, 1, 1)

[node name="Game-over-screen" type="Node2D"]
script = ExtResource("1_lfbmt")

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1150.0
offset_bottom = 647.0

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(400, 200)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 239.0
offset_top = -1.0
offset_right = 916.0
offset_bottom = 641.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_7eqmw")
expand_mode = 1
stretch_mode = 5

[node name="Title" type="Label" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = 224.0
offset_top = 85.0
offset_right = 944.0
offset_bottom = 191.0
grow_horizontal = 2
pivot_offset = Vector2(60, 60)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_f5e0u")
theme_override_font_sizes/font_size = 80
text = "Game  Over"
horizontal_alignment = 1

[node name="MainMenuButton" type="TextureButton" parent="."]
offset_left = 74.0
offset_top = 504.0
offset_right = 245.0
offset_bottom = 569.0
mouse_filter = 1

[node name="RichTextLabel4" type="RichTextLabel" parent="MainMenuButton"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.5
offset_top = -12.5
offset_right = 187.5
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("3_f5e0u")
theme_override_font_sizes/normal_font_size = 25
text = "MAIN MENU"

[node name="Panel" type="Panel" parent="MainMenuButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = -3.412
anchor_top = -2.669
anchor_right = -3.412
anchor_bottom = -2.669
offset_left = 583.452
offset_top = 173.485
offset_right = 866.452
offset_bottom = 237.485
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_1fduq")

[node name="PlayAgainButton" type="TextureButton" parent="."]
offset_left = 382.0
offset_top = 502.0
offset_right = 553.0
offset_bottom = 567.0
mouse_filter = 1

[node name="RichTextLabel4" type="RichTextLabel" parent="PlayAgainButton"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.5
offset_top = -12.5
offset_right = 213.5
offset_bottom = 12.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("3_f5e0u")
theme_override_font_sizes/normal_font_size = 25
text = "PLAY AGAIN"

[node name="Panel" type="Panel" parent="PlayAgainButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = -3.412
anchor_top = -2.669
anchor_right = -3.412
anchor_bottom = -2.669
offset_left = 583.452
offset_top = 173.485
offset_right = 894.452
offset_bottom = 237.485
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_1fduq")

[node name="LeaderBoardButton" type="TextureButton" parent="."]
offset_left = 715.0
offset_top = 501.0
offset_right = 886.0
offset_bottom = 566.0
mouse_filter = 1

[node name="RichTextLabel4" type="RichTextLabel" parent="LeaderBoardButton"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.5
offset_top = -12.5
offset_right = 271.5
offset_bottom = 12.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("3_f5e0u")
theme_override_font_sizes/normal_font_size = 25
text = "LEADER BOARD"

[node name="Panel" type="Panel" parent="LeaderBoardButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = -3.412
anchor_top = -2.669
anchor_right = -3.412
anchor_bottom = -2.669
offset_left = 583.452
offset_top = 173.485
offset_right = 943.452
offset_bottom = 237.485
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_1fduq")

[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="LeaderBoardButton" to="." method="_on_leader_board_button_pressed"]
